# SmartFarm

./: .gitignore  CMakeLists.txt  onenet信息.txt  宋体_32.zi  引脚分配.xlsx
components/hardware/: CMakeLists.txt  adc.c  adc.h  app.c  app.h  delay.c  delay.h  gpio_driver.c  gpio_driver.h  gy30.c  gy30.h  idf_component.yml  lcd_ili9341.c  lcd_ili9341.h  mqtt_handler.c  mqtt_handler.h  mqtt_publisher.c  mqtt_publisher.h  onenet_config.c  onenet_config.h  pwm_driver.c  pwm_driver.h  sntp_time.c  sntp_time.h  timer.c  timer.h  tjc_driver.c  tjc_driver.h  wifi_config.c  wifi_config.h
main/: CMakeLists.txt  app.c  app.h  idf_component.yml  main.c
